--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
 		"@testing-library/user-event": "^12.8.3",
 		"axios": "^0.21.4",
 		"bootstrap": "^5.1.3",
+		"cors": "^2.8.5",
 		"georaster": "^1.5.4",
 		"georaster-layer-for-leaflet": "^3.4.0",
 		"jsonwebtoken": "^8.5.1",
